--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -7,5 +7,10 @@
   "trailingComma": "all",
   "arrowParens": "always",
   "endOfLine": "lf",
-  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"]
+  "plugins": ["@ianvs/prettier-plugin-sort-imports", "prettier-plugin-tailwindcss"],
+  "pluginSearchDirs": false,
+  "importOrder": ["<TYPES>", "<TYPES>^[.]", "<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"],
+  "importOrderParserPlugins": ["typescript", "jsx", "classProperties", "decorators-legacy"],
+  "importOrderTypeScriptVersion": "5.0.0",
+  "tailwindFunctions": ["clsx"]
 }
