--- a/package.json
+++ b/package.json
@@ -22,9 +22,25 @@
     ]
   },
   "dependencies": {
+    "@types/aos": "^3.0.7",
+    "aos": "^2.3.4",
+    "clsx": "^2.0.0",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^2.30.0",
+    "mdx-bundler": "9.2.1",
     "next": "13.5.6",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^4.12.0",
+    "react-photo-view": "1.2.2",
+    "remark-emoji": "^3.1.2",
+    "rehype-external-links": "^3.0.0",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "3.0.1",
+    "remark-smartypants": "^2.0.0",
+    "shiki": "^0.14.5"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
